updated the yaml file
