# main.py
@@ -3,14 +3,12 @@ import quart
 import quart_cors
 from quart import request, send_file, jsonify, send_from_directory
 from presentation import PresentationGenerator
+from utils import create_presentation_new
 import uuid
 import os
 import io
 from pptx import Presentation
-
 from pptx.enum.shapes import MSO_SHAPE_TYPE
-
-
 from pptx.util import Inches
 
 app = quart_cors.cors(quart.Quart(__name__), allow_origin="https://chat.openai.com")
@@ -59,6 +57,20 @@ def delete_presentation(presentation_id):
     presentation_path = presentation_id
     # Delete the file
     os.remove(presentation_path)
+
+
+
+@app.post("/presentation/link_new")
+async def presentation_link_new():
+    slide_data = (await request.get_json())['slide_data']
+    presentation_file = create_presentation_new(slide_data, PRESENTATION_DIR)
+    print(presentation_file)
+    
+    # Generate a unique download link for the file
+    download_link = f"http://{request.host}/presentation/download/{os.path.basename(presentation_file)}"
+    return jsonify({"download_link": download_link})
+
+
 
 @app.post('/presentation/link')
 async def presentation_link():
